@@ -84,8 +84,8 @@ SendMail=20
 EnableRSS=true
 ;The default page to load. (Home/SignIn/Factions/Players/DiscoveredMap/FactionsMap/Graphs/About)
 DefaultPage='Home'
-;The directory the galaxies directories resides. (This path is relative to the PHPConfig.ini location)
-GalaxiesDir='/../.avorion/galaxies'
+;Obsolete Option.
+GalaxiesDir=''
 ;The file path the console.log file resides. (This path is relative to the PHPConfig.ini location)
 ConsoleLog='/../console.log'
 ;The file path the console.log file resides. (This path is relative to the PHPConfig.ini location)
