@@ -19,7 +19,6 @@ class CommonController
     //Parse PHPConfig.ini
     $this->Config = parse_ini_file(__DIR__ . '/../PHPConfig.ini', true, INI_SCANNER_TYPED);//$Config;
     //prepend these config options to reflect current directory in relation to PHPConfig.ini and not this file
-    $this->Config['GalaxiesDir'] = __DIR__.'/..'.$this->Config['GalaxiesDir'];
     $this->Config['ConsoleLog'] = __DIR__.'/..'.$this->Config['ConsoleLog'];
     $this->Config['ServerLog'] = __DIR__.'/..'.$this->Config['ServerLog'];
     $this->Config['Manager'] = __DIR__.'/..'.$this->Config['Manager'];
@@ -28,6 +27,10 @@ class CommonController
     $this->Config['StatusBannerDir'] = __DIR__.'/..'.$this->Config['StatusBannerDir'];
     //Parse manager-config.ini
     $this->ManagerConfig = parse_ini_file($this->Config['ManagerConfig'], true, INI_SCANNER_TYPED);//$Config;
+
+    if(empty($this->ManagerConfig['GalaxyDirectory'])){
+      $this->ManagerConfig['GalaxyDirectory'] = __DIR__.'/../../.avorion/galaxies';
+    }
   }
 
   /**
