@@ -2,6 +2,8 @@
 MAX_PLAYERS=10
 ;Name of the galaxy, no spaces allowed
 GALAXY=GalaxyName
+;File path to where your galaxy will be stored. GALAXY will be appended after path: [GalaxyDirectory][/GALAXY]  (Blank will be default to ~/.avorion/galaxies/)
+GalaxyDirectory=
 ;server start up parameters
 PARAMS='--public true --listed true --same-start-sector false'
 ;server port. Default: 27000
@@ -56,5 +58,5 @@ MessageThree=''
 MessageFour=''
 ;A message to broadcast to the server, use MessageInterval and MessageOrder to set when to brodcast.
 MessageFive=''
-;An interval in minutes to broadcast a message to the server. Accepts: 1-59
+;An interval in minutes to broadcast a message to the server.
 MessageInterval=30
