@@ -1,5 +1,5 @@
 1.2.0
-  Moves apache installer to avorion-manager/manager
+  Moves Apache installer to avorion-manager/manager
   separated commands from manager and added to avorion-manager/manager
   updated todo link on about page to direct to github issues
   fixed grep error when running status command with an offline server.
@@ -10,8 +10,15 @@
   Added (help)  `-h` optional parameter, will display name/description of function
   Added optional parameter `-f` to force specific features, like running update with -f will ignore current version checks, and reinstall
   Added custom names for status banners, in PHPConfig.ini
-  Moved Banner Generator script to its own script, ad removed netstat dependency(will now use last reported /players from console).
-  Updated install, to install all options and comments properly
+  Moved Banner Generator script to its own script, removed netstat dependency(will now use last reported /players from console).
+  Updated install script, to install all options and comments properly
+  Added Timed Broadcast's Options/script
+  Added Message Of The Day options
+  Added Sorting Option to PHPConfig.ini for players list on home screen
+  Added send mail to all members of a group, select the group from the drop down and hit send
+  Migrated Admins.xml parser into its own function
+  Refined Restart command to attempt restart 10 times, aswell as other improvments in the script
+  Added new option GalaxyDirectory, allowing you to set the location of your galaxies directory.
 
 1.1.7
   Added custom cronjob config options to manager-config.ini
